chore: Small code cleanup